src/objects/Nutrition_Review__c.object
<CustomObject>
    <fields>
        <fullName>NR_Associated_Case__c</fullName>
        <label>NR Associated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Nutrition Reviews</relationshipLabel>
        <relationshipName>Nutrition_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NR_Comments__c</fullName>
        <label>NR Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NR_Completed_Date__c</fullName>
        <label>NR_Completed_Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NR_Number__c</fullName>
        <label>NR Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NR_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NR Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Nutrition_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NR_Status__c</fullName>
        <label>NR Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NR_Summary__c</fullName>
        <label>NR Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synced_With_PQM__c</fullName>
        <label>Synced With PQM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Nutrition Review</label>
    <listViews>
        <fullName>Completed_NRs</fullName>
        <columns>NAME</columns>
        <columns>NR_Comments__c</columns>
        <columns>NR_Associated_Case__c</columns>
        <columns>NR_Reviewer__c</columns>
        <columns>NR_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NR_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed NRs</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_NRs</fullName>
        <columns>NAME</columns>
        <columns>NR_Summary__c</columns>
        <columns>NR_Associated_Case__c</columns>
        <columns>NR_Reviewer__c</columns>
        <columns>NR_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NR_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress NRs</label>
    </listViews>
    <nameField>
        <label>NR Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nutrition Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>